--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><i class="fa fa-circle-o-notch"></i> Brand</a>
+      <%= link_to "<i class='fa fa-circle-o-notch'></i> Brand".html_safe, root_path, class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav pull-right">
-        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="/about">About</a></li>
+        <% if current_user %>
+        <li><%= link_to "Settings", edit_user_registration_path %></li>
+        <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Login", new_user_session_path %> </li>
+        <% end %>
         
       </ul>
     </div><!-- /.navbar-collapse -->
